--- a/eazeWork/src/main/AndroidManifest.xml
+++ b/eazeWork/src/main/AndroidManifest.xml
@@ -80,6 +80,27 @@
 
         <activity android:name=".AddExpenseActivity" />
         <activity android:name=".ViewDocumentActivity"></activity>
+        <service
+            android:name="hr.eazework.Notification.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+        <service
+            android:name="hr.eazework.Notification.MyFirebaseInstantInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+        <service
+            android:exported="false"
+            android:name="hr.eazework.Notification.MyJobService">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
+        </service>
+
+
     </application>
 
 </manifest>
